# storage/api-docs/api-docs.json
@@ -1,8 +1,8 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "hcm-service",
-        "description": "HCM Swagger Documentation",
+        "title": "auth-service",
+        "description": "Auth Swagger Documentation",
         "version": "0.0.1"
     },
     "servers": [
@@ -54,14 +54,37 @@
                 }
             }
         },
-        "/api/v1": {
-            "get": {
+        "/api/v1/auth": {
+            "post": {
                 "tags": [
                     "auth"
                 ],
                 "summary": "JWT access token",
                 "description": "Returns jwt token",
                 "operationId": "auth",
+                "parameters": [
+                    {
+                        "name": "Accept",
+                        "in": "header",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "application/json"
+                    },
+                    {
+                        "name": "Content-Type",
+                        "in": "header",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "application/json"
+                    }
+                ],
+                "requestBody": {
+                    "$ref": "#/components/requestBodies/Authenticate"
+                },
                 "responses": {
                     "200": {
                         "description": "Returns JWT token"
@@ -89,60 +112,6 @@
                             }
                         },
                         "type": "object"
-                    }
-                },
-                "type": "object"
-            },
-            "Links": {
-                "properties": {
-                    "first": {
-                        "type": "string",
-                        "example": "http://hcm.localhost/v1/?page=1"
-                    },
-                    "last": {
-                        "type": "string",
-                        "example": "http://hcm.localhost/v1/?page=10"
-                    },
-                    "prev": {
-                        "type": "string",
-                        "example": "null"
-                    },
-                    "next": {
-                        "type": "string",
-                        "example": "http://hcm.localhost/v1/?page=2"
-                    }
-                },
-                "type": "object"
-            },
-            "Meta": {
-                "properties": {
-                    "current_page": {
-                        "type": "int",
-                        "example": "1"
-                    },
-                    "from": {
-                        "type": "int",
-                        "example": "1"
-                    },
-                    "last_page": {
-                        "type": "int",
-                        "example": "1"
-                    },
-                    "path": {
-                        "type": "string",
-                        "example": "http://hcm.localhost/v1/"
-                    },
-                    "per_page": {
-                        "type": "int",
-                        "example": "10"
-                    },
-                    "to": {
-                        "type": "int",
-                        "example": "2"
-                    },
-                    "total": {
-                        "type": "int",
-                        "example": "2"
                     }
                 },
                 "type": "object"
